<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.thepolymath.cricketcounter.MainActivity">

    <LinearLayout
        android:id="@+id/teamsAndButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/teamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingTop="16dp">

                <TextView
                    android:id="@+id/teamNameA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="16dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/TeamA"
                    android:textColor="#616161"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="16dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/role1"
                    android:textAllCaps="true"
                    android:textColor="#616161"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/team_a_runs"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/zero"
                            android:textAllCaps="true"
                            android:textColor="#000000"
                            android:textSize="56sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/term1"
                            android:textAllCaps="true"
                            android:textColor="#000000"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-light"
                        android:paddingEnd="2dp"
                        android:paddingLeft="12dp"
                        android:paddingRight="2dp"
                        android:paddingStart="12dp"
                        android:text="@string/dash"
                        android:textAllCaps="true"
                        android:textColor="#000000"
                        android:textSize="56sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/team_a_wickets"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/zero"
                            android:textAllCaps="true"
                            android:textColor="#000000"
                            android:textSize="56sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/term2"
                            android:textAllCaps="true"
                            android:textColor="#000000"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/separator"
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/teamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingTop="16dp">

                <TextView
                    android:id="@+id/teamNameB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="16dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/TeamB"
                    android:textColor="#616161"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="16dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/role2"
                    android:textAllCaps="true"
                    android:textColor="#616161"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/team_b_overs"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/zero2"
                            android:textAllCaps="true"
                            android:textColor="#000000"
                            android:textSize="56sp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/dot"
                        android:textAllCaps="true"
                        android:textColor="#000000"
                        android:textSize="56sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/team_b_balls"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/zero"
                            android:textAllCaps="true"
                            android:textColor="#000000"
                            android:textSize="56sp" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/term3"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/runButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="six"
                    android:text="@string/score5" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="four"
                    android:text="@string/score4" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="out"

                    android:text="@string/out" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="one"
                    android:text="@string/score1" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="two"
                    android:text="@string/score2" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="three"
                    android:text="@string/score3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:onClick="extras"
                    android:paddingBottom="8dp"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:text="@string/score6" />

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:onClick="noRuns"
                    android:paddingBottom="8dp"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:text="@string/waste" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/strikenotice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="72dp"
        android:fontFamily="sans-serif-medium"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="14sp" />

    <Button
        android:id="@+id/swapAndReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:padding="16dp"
        android:onClick="swapAndReset"
        android:text="@string/swap" />
</RelativeLayout>
